# pyxll-jupyter

./: .gitignore  LICENSE.md  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: build-wheel.yml  pypi-upload.yml
examples/: example.ipynb  example.xlsm
pyxll_jupyter/: __init__.py  browser.py  extipy.py  kernel.py  magic.py  onedrive.py  pyxll.py  qtimports.py  widget.py
pyxll_jupyter/kernel_managers/: __init__.py  extipy.py  labkm.py  nbkm.py
pyxll_jupyter/provisioning/: __init__.py  existing.py
pyxll_jupyter/pyxll/: __init__.py  impl.py
pyxll_jupyter/resources/: ribbon.xml
pyxll_jupyter/widgets/: __init__.py  browser.py  jupyter.py  qtimports.py
